--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,8 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
 github_username:  anantguptadbl
+disqus:
+    shortname: https-anantguptadbl-github-io
 
 # Build settings
 markdown: kramdown
