--- a/_config.yml
+++ b/_config.yml
@@ -15,14 +15,14 @@
 # in the templates via {{ site.myvariable }}.
 title: Anant Gupta Blog
 email: anantguptadbl@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
- This blog is to display some of my ideas and work and have discussions on the same
+#description: >- # this means to ignore newlines until "baseurl:"
+# This blog is to display some of my ideas and work and have discussions on the same
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
 github_username:  anantguptadbl
-disqus:
-    shortname: https-anantguptadbl-github-io
+#disqus:
+#    shortname: https-anantguptadbl-github-io
 
 # Build settings
 markdown: kramdown
